fluxcd/infrastructure/configs/traefik/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: kubepods.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 8080
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3001
          - path: /desktops
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3001
